--- a/package.json
+++ b/package.json
@@ -25,5 +25,6 @@
     "hexo-server": "^3.0.0",
     "hexo-theme-yun": "^1.10.9",
     "hexo-wordcount": "^6.0.1"
-  }
+  },
+  "packageManager": "pnpm@7.1.5"
 }
