--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "hexo-renderer-stylus": "^2.1.0",
     "hexo-server": "^3.0.0",
     "hexo-theme-yun": "^1.10.9",
-    "hexo-wordcount": "^6.0.1"
+    "hexo-wordcount": "^6.0.1",
+    "js-yaml": "^4.1.0"
   },
   "packageManager": "pnpm@7.1.5"
 }
